objects/SVMXC__QB_Response_Options__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>This object is used to store Response Options (Possible Answer Types) to the Questions</description>
    <fields>
        <fullName>SVMXC__Question_Bank__c</fullName>
        <description>This is a lookup field to Master Detail (Question Bank)</description>
        <label>Question</label>
        <referenceTo>SVMXC__Question_Bank__c</referenceTo>
        <relationshipLabel>QB Response Options</relationshipLabel>
        <relationshipName>QB_Response_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__Response__c</fullName>
        <description>This field is used to hold the response option for the question</description>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Sequence__c</fullName>
        <description>This field is used to store the order in which the response option should be displayed</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>QB Response Options</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QB Response Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>